# Poise-CFLS

./: .env.example  .gitignore  LICENSE  Makefile  PHASE0_NOTES.md  README.md  docker-compose.yml  package.json
.github/workflows/: api.yml  web.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260529_0000_initial.py  20260530_0001_phase1_domain.py  20260530_0002_phase4_chat.py  20260530_0003_phase4_reasoning.py  20260530_0004_phase6_feedback.py
apps/api/poise/: __init__.py  main.py
apps/api/poise/api/v1/: __init__.py  admin.py  auth.py  chat.py  data.py  feedback.py  forecast.py  health.py  me.py  plans.py
apps/api/poise/core/: audit.py  celery_app.py  config.py  database.py  rbac.py  security.py
apps/api/poise/data_integration/: adapters.py  cli.py  importers.py  quality_gate.py
apps/api/poise/domain/: models.py  schemas.py
apps/api/poise/feedback/: bias.py  mape.py  rolling.py  tasks.py
apps/api/poise/forecasting/: accuracy.py  layered.py  reserve.py  scenarios.py  service.py
apps/api/poise/llm/: client.py  orchestrator.py  prompts.py  tools.py
apps/api/poise/optimization/: model.py  multi_plan.py  persist.py  service.py  solver.py
apps/api/poise/scripts/: bootstrap.py
apps/api/seeds/demo_company/: README.md  accounts.csv  balances.csv  cashflows.csv  credit_lines.csv  entities.csv  instruments.csv  reserve_rules.csv
apps/api/tests/: test_adapters.py  test_forecasting.py  test_llm_tools.py  test_optimization.py  test_quality_gate.py  test_rbac.py  test_refinements.py  test_security.py  test_us_dialogues.py
apps/web/: .dockerignore  Dockerfile  middleware.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/app/: globals.css  (+1 more)
doc/: Demo录制脚本_5分钟.md  数据契约_CSV.md  用户手册.md  稳盈Poise_产品需求说明书.docx  稳盈Poise_开发计划_V0.1.md  稳盈Poise_汇报.pptx  稳盈Poise_系统设计指导说明书.md  第七组：稳盈Poise_路演.pptx  运维手册.md  适配器接入指南.md
scripts/: demo_runner.js  record_demo.sh  smoke.sh
(+49 files in other folders)
